portal-processual/karbon-h/processual-ns.yml
# 17/10/2022 - Mauro
apiVersion: v1
kind: Namespace
metadata:
  name: processual-h
  labels:
    istio-injection: enabled
