portal-processual/karbon-h/processual-deploy.yml
# Deployment + Servide para Portal-Processual
# Mauro - 14/03/22
# Revisão: 07/06/22
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processual-deployment
  namespace: processual-h
  labels:
    app: processual
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processual
  template:
    metadata:
      labels:
        app: processual
    spec:
      containers:
        - name: processual-deployment
          image: cloud.canister.io:5000/tcmsputds/portal-processual:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: canister-tcmsputds         
---
apiVersion: v1
kind: Service
metadata:
  name: processual-service
  namespace: processual-h
spec:
  selector:
    app: processual
  ports:
    - name: http
      protocol: TCP
      port: 3006
      targetPort: 3000
#  externalIPs:
#    - 172.22.195.153
